<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_transform">

    <fragment
        android:id="@+id/nav_transform"
        android:name="com.example.ceidflix.ui.transform.TransformFragment"
        android:label="@string/menu_transform"
        tools:layout="@layout/fragment_transform" />

    <fragment
        android:id="@+id/nav_reflow"
        android:name="com.example.ceidflix.ui.reflow.ReflowFragment"
        android:label="@string/menu_reflow"
        tools:layout="@layout/fragment_reflow" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.ceidflix.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.ceidflix.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ceidflix.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home" />

    <!--<fragment
        android:id="@+id/nav_watchlist"
        android:name="com.example.ceidflix.WatchlistFragment"
        android:label="@string/watchlist_title"
        tools:layout="@layout/fragment_watchlist" />

    <fragment
        android:id="@+id/nav_friends"
        android:name="com.example.ceidflix.FriendsFragment"
        android:label="@string/friends_title"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.example.ceidflix.StatisticsFragment"
        android:label="@string/statistics_title"
        tools:layout="@layout/fragment_statistics" />-->
</navigation>